# bigquery-emulator

./: .air.duck.toml  .air.toml  .bazelrc  .clang-format  .clang-tidy  .clangd  .dockerignore  .envrc  .envrc.local.example  .gitignore  .golangci.yml  .goreleaser.yml  .release.yml  .releaserc.yml  404.html  BUILD.bazel  CLAUDE.md  CMakeLists.txt  DOCKER.md  Dockerfile  Dockerfile.linked  HANDOFF.md  LICENSE  MODULE.bazel  Makefile  README.md  ROADMAP.md  Taskfile.yml  badge-cpp.json  badge-go.json  badge-release.json  badge.json  baseline.json  buf.gen.yaml  buf.yaml  docker-compose.yml  go.mod  go.sum  go.work.dev  go.work.dev.sum  (+9 more)
DOCKER/: index.html
backend/catalog/: BUILD.bazel  catalog_crash_safety_test.cc  create_function_util.cc  create_function_util.h  create_procedure_util.cc  create_procedure_util.h  create_tvf_util.cc  create_tvf_util.h  create_view_util.cc  create_view_util.h  emulator_builtin_extensions.cc  emulator_builtin_extensions.h  emulator_external_query_tvf_extensions.cc  emulator_external_query_tvf_extensions.h  emulator_keys_stub_catalog_test.cc  emulator_ml_test_catalog.h  emulator_ml_tvf_extensions.cc  emulator_ml_tvf_extensions.h  emulator_ml_tvf_extensions_test.cc  googlesql_catalog.cc  googlesql_catalog.h  googlesql_catalog_find_helpers.cc  googlesql_catalog_find_helpers.h  googlesql_catalog_wildcard.cc  info_schema_internal.h  info_schema_rows.cc  info_schema_schema.cc  info_schema_table.cc  info_schema_table.h  js_udf_registry.cc  js_udf_registry.h  measure_catalog.cc  measure_catalog.h  measure_catalog_test.cc  procedure_registry.cc  procedure_registry.h  python_udf_registry.cc  python_udf_registry.h  python_udf_registry_ddl.cc  python_udf_registry_internal.h  (+28 more)
backend/engine/: BUILD.bazel  disposition.cc  disposition.h  disposition_test.cc  engine.cc  engine.h  phase_recorder.cc  phase_recorder.h
backend/engine/control/: BUILD.bazel  control_op_alter_table.cc  control_op_ddl.cc  control_op_executor.cc  control_op_executor.h  control_op_executor_ctas_test.cc  control_op_executor_deferred_test.cc  control_op_executor_test.cc  control_op_export_data.cc  control_op_internal.h  control_op_literals.cc  control_op_load_data.cc  control_op_materialized_view.cc  control_op_options.cc  control_op_options.h  control_op_routing_test.cc  control_op_time_travel.cc  gcs_uri_resolver.cc  gcs_uri_resolver.h  pipe_create_table.cc  pipe_create_table.h  pipe_export_data.cc  pipe_export_data.h
backend/engine/coordinator/: BUILD.bazel  executor.cc  executor.h  local_coordinator_analyze.cc  local_coordinator_analyze.h  local_coordinator_engine.cc  local_coordinator_engine.h  local_coordinator_engine_core_test.cc  local_coordinator_engine_measure_keys_test.cc  local_coordinator_engine_query_fixes_test.cc  local_coordinator_engine_semantic_test.cc  local_coordinator_engine_test.cc  local_coordinator_engine_test_fixture.h  route_classifier.cc  route_classifier.h  route_classifier_advanced_test.cc  route_classifier_analytic.cc  route_classifier_core_test.cc  route_classifier_functions.cc  route_classifier_test.cc  route_classifier_test_fixture.h  route_classifier_visitor.cc  route_classifier_visitor.h  routine_rehydrate.cc  routine_rehydrate.h  script_execute_immediate.cc  script_execute_immediate.h  script_executor.cc  script_executor.h  script_executor_internal.cc  script_executor_internal.h  script_executor_set.cc  script_executor_set.h  script_googlesql_runner.cc  script_googlesql_runner.h  script_row_iterator.cc  script_row_iterator.h  script_statement_evaluator.cc  script_statement_evaluator.h  sql_preprocess.cc  (+13 more)
backend/engine/duckdb/: BUILD.bazel  arrow_to_bq.cc  arrow_to_bq.h  arrow_to_bq_internal.h  arrow_to_bq_read.cc  arrow_to_bq_test.cc  arrow_to_bq_types.cc  duckdb_engine.cc  duckdb_engine.h  duckdb_engine_test.cc  duckdb_executor.cc  duckdb_executor.h  duckdb_executor_attach.cc  duckdb_executor_attach_helpers.cc  duckdb_executor_attach_helpers.h  duckdb_executor_attach_test.cc  duckdb_executor_ddl.cc  duckdb_executor_dml.cc  duckdb_executor_insert_select.cc  duckdb_executor_insert_select_helpers.cc  duckdb_executor_insert_select_helpers.h  duckdb_executor_internal.h  duckdb_executor_literals.cc  duckdb_executor_query.cc  duckdb_executor_routing_test.cc  duckdb_executor_security.cc  duckdb_executor_security.h  duckdb_executor_struct_cast_test.cc  duckdb_executor_test.cc  duckdb_executor_test_fixture.h  duckdb_executor_time_travel.cc  duckdb_executor_time_travel.h
backend/schema/: BUILD.bazel  googlesql_to_bq.cc  googlesql_to_bq.h  googlesql_to_bq_test.cc  schema.cc  schema.h
backend/sqltools/: BUILD.bazel  catalog_names.cc  catalog_names.h  catalog_names_test.cc  sql_references.cc  sql_references.h  sql_tools.cc  sql_tools.h  sql_tools_complete.cc  sql_tools_complete_helpers.cc  sql_tools_complete_helpers.h  sql_tools_test.cc
backend/storage/: BUILD.bazel  row_restriction.cc  row_restriction.h  row_restriction_test.cc  storage.cc  storage.h  table_governance.h
binaries/emulator_main/: BUILD.bazel  main.cc  version.cc.tmpl  version.h  version_gen.sh  version_test.cc
frontend/handlers/: BUILD.bazel  README.md  catalog.cc  catalog.h  catalog_governance.cc  catalog_routines.cc  catalog_test.cc  catalog_undrop.cc  handler_common.cc  handler_common.h  query.cc  query.h  query_dry_run_test.cc  query_execute_test.cc  query_internal.cc  query_internal.h  query_stream_internal.cc  query_test.cc  query_test_fixture.h  sqltools.cc  sqltools.h  storage_read.cc  storage_read.h  storage_read_create_session_test.cc  storage_read_grpc_test.cc  storage_read_internal.cc  storage_read_internal.h  storage_read_internal_test.cc  storage_read_streams.cc  storage_read_test.cc  storage_read_test_fixture.h  storage_row_restriction_analyze.cc  storage_row_restriction_analyze.h  storage_write.cc  storage_write.h  storage_write_append_rows.cc  storage_write_buffered.cc  storage_write_grpc_test.cc  storage_write_internal.cc  storage_write_internal.h  (+1 more)
frontend/server/: BUILD.bazel  server.cc  server.h
proto/: BUILD.bazel  emulator.proto  storage_read.proto  storage_write.proto
(+4185 files in other folders)
