# Top-level Bazel BUILD file. Empty for now; the build-scaffold work
# in ROADMAP.md adds proper rules for `binaries/gateway_main`,
# `binaries/emulator_main`, and the proto-generated bindings,
# mirroring cloud-spanner-emulator's layout.

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "googlesql_source",
    values = {"define": "googlesql_mode=source"},
)
