# Bzlmod root for bigquery-emulator.
#
# Bazel is the sole build system for the C++ engine (the GoogleSQL
# analyzer, the DuckDB engine + transpiler, and the production
# `emulator_main` binary). GoogleSQL is Bazel-only, and
# `cloud-spanner-emulator` builds the same way, so the C++ engine of
# bigquery-emulator follows suit.
#
# GoogleSQL — two-mode dependency selection (the consumer-wiring
# track of the `googlesql-prebuilt` rollout, see
# `docs/dev/googlesql-prebuilt/README.md`).
#
# Mode 1: source (DEFAULT, the path declared below).
#   `bazel_dep(name = "googlesql", ...)` + `local_path_override` to a
#   sibling checkout at `../googlesql/`. This is the
#   cloud-spanner-emulator-style developer workflow: every
#   contributor clones googlesql next to bigquery-emulator and the
#   Bazel build sees a real on-disk repository (no tarball, no
#   registry hop). Used today by `task emulator:build-engine:bazel`
#   and the existing CI/Docker/release lanes.
#
# Mode 2: prebuilt (OPTIONAL, opt-in for now; the CI/Docker/release
#         track owns the broad rollout of switching defaults / CI /
#         Docker / release).
#   The artifact-producer pipeline
#   (`tools/googlesql-prebuilt/`) publishes a `linux/amd64` tarball
#   per `(artifact_version, googlesql_sha)` pair. The unpacked
#   tarball declares `module(name = "googlesql", version = ...)` so a
#   single `--override_module=googlesql=<unpacked_path>` (or an
#   equivalent `archive_override`) flips the @googlesql label space
#   onto the prebuilt artifact's wrapper `cc_library` targets without
#   editing any emulator `BUILD.bazel`.
#
#   The opt-in mechanism today is the `--config=googlesql-prebuilt`
#   group in `.bazelrc` plus the `task googlesql:*` helpers
#   (`taskfiles/googlesql.yml`) that fetch / verify / unpack the
#   artifact under `.cache/googlesql-prebuilt/`. See
#   `docs/dev/googlesql-prebuilt/README.md` for the consumer
#   contract and `tools/googlesql-prebuilt/README.md` for the
#   producer/local-exercise workflow.
#
# Selection is explicit. There is no silent fallback from prebuilt to
# source: a missing or checksum-mismatched prebuilt artifact in
# prebuilt mode is a hard error before the build starts (the
# `task googlesql:fetch-prebuilt` / `task googlesql:stage-bazel`
# helpers refuse to populate the cache on a SHA mismatch, and Bazel
# refuses to start when `--override_module` points at a path that is
# missing or has the wrong `module(name = ...)` field).
#
# The version we pin to (`2026.01.1`) matches the upstream module
# name + version in `../googlesql/MODULE.bazel`. (Same string
# resolves the prebuilt artifact's `module(name = "googlesql",
# version = ...)` field; the prebuilt's version is the producer-side
# `artifact_version` for tracking, but Bazel uses whichever override
# wins to locate the on-disk module.)
#
# Abseil is pinned to the version GoogleSQL pins (20240722.1). Older
# Abseil is required by GoogleSQL because newer releases removed the
# `slot_type` member that `googlesql/public/types/internal_utils.h`
# relies on; the same `single_version_override` lives in GoogleSQL's
# MODULE.bazel.

module(
    name = "bigquery_emulator",
    version = "0.0.0",
)

# GoogleSQL — name resolution / analyzer / resolved-AST.
#
# Default mode: SOURCE. Built from the sibling checkout
# (`../googlesql`) via `local_path_override`. Override at build time
# (e.g. `--config=googlesql-prebuilt` from `.bazelrc`) to consume the
# prebuilt artifact instead — see the file header for the
# two-mode story.
#
# Dev workflow (source mode): clone
# https://github.com/google/googlesql at the tag matching the version
# below into `../googlesql/`. Bumping the local checkout is enough to
# bump the build (no registry hop needed).
#
# IMPORTANT (one-time dev setup, source mode): upstream GoogleSQL
# tags its `MODULE.bazel:module(version = ...)` as `2026.01.1`. That
# string is not strict semver — the leading zero in `01` trips a
# hard `fail()` inside `gazelle`
# (`internal/bzlmod/semver.bzl:30`, "Numeric identifiers in semantic
# version strings must not include leading zeroes"). The version is
# parsed eagerly by gazelle's `go_deps` extension for every Bazel
# module in the resolved graph, regardless of whether anything
# actually uses the Go side, so a fresh checkout will refuse to
# build until the `2026.01.1` is rewritten to `2026.1.1` (or
# another strict-semver alias). Apply the patch in `../googlesql/`
# directly:
#
#     sed -i 's/version = "2026.01.1"/version = "2026.1.1"/' \
#         ../googlesql/MODULE.bazel
#
# Re-running after a `git pull` upstream is a no-op until upstream
# bumps the leading zero or gazelle gets a non-strict semver mode
# (https://github.com/bazel-contrib/bazel-gazelle/issues — track and
# remove this note when fixed).
#
# Prebuilt mode bypasses this patch: the published artifact ships a
# strict-semver `module(name = "googlesql", version = ...)` already.
bazel_dep(name = "googlesql", version = "2026.1.1")
local_path_override(
    module_name = "googlesql",
    path = "../googlesql",
)

# Abseil — same `slot_type`-era pin GoogleSQL itself uses. Without the
# matching `single_version_override`, Bzlmod resolves to a newer
# release and `googlesql/public/types/internal_utils.h` fails to
# compile.
bazel_dep(name = "abseil-cpp", version = "20240722.1", repo_name = "com_google_absl")
single_version_override(
    module_name = "abseil-cpp",
    version = "20240722.1",
)

# Protobuf + gRPC — already transitive deps of googlesql, but we list
# them explicitly so our own targets (proto_library, cc_grpc_library)
# can name them directly. Versions match what GoogleSQL pulls in.
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.69.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_cc", version = "0.2.8")

# GoogleTest — used by the C++ unit tests for the analyzer-facing
# code (backend/schema/googlesql_to_bq, frontend/handlers/query, ...).
# Pin matches GoogleSQL's own pin so a single resolved version flows
# through the build graph; declaring it as a direct bazel_dep is what
# lets our `cc_test` targets reach `@com_google_googletest//:gtest_main`
# without going through GoogleSQL's transitive surface.
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")

# Bump Gazelle past the broken semver parser. Pinned googlesql ships
# `gazelle = 0.45.0`, which crashes on Go pseudo-version timestamps
# (e.g. `v0.0.0-20210717090340-…` -> "Numeric identifiers in semantic
# version strings must not include leading zeroes" inside its
# `internal/bzlmod/semver.bzl`). 0.48+ rewrites the parser; pin a
# recent stable so the GoogleSQL `go_deps.from_file("//:go.mod")`
# extension can resolve cleanly.
single_version_override(
    module_name = "gazelle",
    version = "0.51.0",
)

# DuckDB — prebuilt libduckdb tarball v1.5.3. We use `http_archive`
# (the WORKSPACE-era rule, re-exposed under bzlmod via `use_repo_rule`)
# rather than building DuckDB from source: upstream publishes a
# ready-to-link `libduckdb.so` + headers per architecture, and pulling
# those in directly avoids a multi-minute compile of DuckDB's ~600k-line
# C++ tree on every clean build. The pin/SHA-256 lives in
# `third_party/duckdb/VERSION`.
#
# Today we register only the linux/amd64 artifact: the GoogleSQL
# hermetic LLVM toolchain only cross-builds cleanly to amd64, so no
# engine binary ships for arm64. When the arm64 Bazel build lands,
# copy this block, swap in the arm64 zip URL + SHA-256, and
# `select()` between the two in
# `//binaries/emulator_main:emulator_main`'s `deps` list.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "duckdb_linux_amd64",
    build_file = "//third_party/duckdb:duckdb.BUILD.bazel",
    sha256 = "0a926eba5bce0abc0010f4b9109133e4440cb74e97bd10fd2d0fc2a721621b05",
    # Primary URL listed twice so Bazel's url-list failover re-attempts the
    # same asset after transient GitHub 5xx (see .bazelrc downloader retries).
    urls = [
        "https://github.com/duckdb/duckdb/releases/download/v1.5.3/libduckdb-linux-amd64.zip",
        "https://github.com/duckdb/duckdb/releases/download/v1.5.3/libduckdb-linux-amd64.zip",
    ],
)

# Duktape — embeddable ECMAScript engine for BigQuery LANGUAGE js UDFs.
# Pin/checksum in third_party/duktape/VERSION.
http_archive(
    name = "duktape_src",
    build_file = "//third_party/duktape:duktape.BUILD.bazel",
    sha256 = "90f8d2fa8b5567c6899830ddef2c03f3c27960b11aca222fa17aa7ac613c2890",
    strip_prefix = "duktape-2.7.0",
    urls = [
        "https://github.com/svaarala/duktape/releases/download/v2.7.0/duktape-2.7.0.tar.xz",
        "https://github.com/svaarala/duktape/releases/download/v2.7.0/duktape-2.7.0.tar.xz",
    ],
)
