# Bazel build for the GoogleSQL-facing catalog adapter.
#
# The adapter is the bridge between GoogleSQL's `Catalog` interface
# (which name-resolution / analysis call) and the engine-agnostic
# `backend::storage::Storage` interface (which actually owns the
# dataset/table catalog).
#
# `@googlesql//...` resolves through the `local_path_override` in the
# repo-root `MODULE.bazel`, so a sibling checkout of GoogleSQL
# (`../googlesql/`) is the source of truth for this dep. Bumping
# GoogleSQL = bumping that checkout; no registry hop required.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//:googlesql_deps.bzl", "GOOGLESQL_SQL_FUNCTION_DEPS", "GOOGLESQL_SQL_TVF_DEPS")

package(default_visibility = ["//visibility:public"])

# `storage_table` is the `googlesql::Table` adapter that wraps an
# entry in the active `Storage`. It is the execution-side counterpart
# of the analysis-only `SimpleTable`s the catalog used to mint;
# subclassing `SimpleTable` keeps the column-list management one
# place so the override is just the `CreateEvaluatorTableIterator`
# factory plus the storage Value -> googlesql Value conversion.
cc_library(
    name = "storage_table",
    srcs = ["storage_table.cc"],
    hdrs = ["storage_table.h"],
    deps = [
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@googlesql//googlesql/public:evaluator_table_iterator",
        "@googlesql//googlesql/public:numeric_value",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "virtual_table",
    hdrs = ["virtual_table.h"],
    deps = [
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "//third_party/duckdb",
        "@googlesql//googlesql/public:simple_catalog",
    ],
)

cc_library(
    name = "info_schema_table",
    srcs = [
        "info_schema_rows.cc",
        "info_schema_schema.cc",
        "info_schema_table.cc",
    ],
    hdrs = [
        "info_schema_internal.h",
        "info_schema_table.h",
    ],
    deps = [
        ":storage_table",
        ":view_registry",
        ":virtual_table",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "//third_party/duckdb",
        "@googlesql//googlesql/public:evaluator_table_iterator",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "wildcard_table_util",
    srcs = ["wildcard_table_util.cc"],
    hdrs = ["wildcard_table_util.h"],
    deps = [
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "wildcard_table_suffix_filter",
    srcs = ["wildcard_table_suffix_filter.cc"],
    hdrs = ["wildcard_table_suffix_filter.h"],
    deps = [
        ":wildcard_table_util",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "wildcard_table",
    srcs = ["wildcard_table.cc"],
    hdrs = ["wildcard_table.h"],
    deps = [
        ":storage_table",
        ":virtual_table",
        ":wildcard_table_util",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "//third_party/duckdb",
        "@googlesql//googlesql/public:evaluator_table_iterator",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "create_function_util",
    srcs = ["create_function_util.cc"],
    hdrs = ["create_function_util.h"],
    deps = [
        "//backend/engine/coordinator:sql_preprocess",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/resolved_ast",
    ] + GOOGLESQL_SQL_FUNCTION_DEPS,
)

cc_library(
    name = "create_view_util",
    srcs = ["create_view_util.cc"],
    hdrs = ["create_view_util.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "create_tvf_util",
    srcs = ["create_tvf_util.cc"],
    hdrs = ["create_tvf_util.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/resolved_ast",
    ] + GOOGLESQL_SQL_TVF_DEPS,
)

cc_library(
    name = "view_registry",
    srcs = ["view_registry.cc"],
    hdrs = ["view_registry.h"],
    deps = [
        ":create_view_util",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "stored_procedure",
    srcs = ["stored_procedure.cc"],
    hdrs = ["stored_procedure.h"],
    deps = [
        "@com_google_absl//absl/container:node_hash_map",
        "@googlesql//googlesql/public:function",
    ],
)

cc_library(
    name = "create_procedure_util",
    srcs = ["create_procedure_util.cc"],
    hdrs = ["create_procedure_util.h"],
    deps = [
        ":stored_procedure",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "procedure_registry",
    srcs = ["procedure_registry.cc"],
    hdrs = ["procedure_registry.h"],
    deps = [
        ":create_procedure_util",
        ":stored_procedure",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "tvf_registry",
    srcs = ["tvf_registry.cc"],
    hdrs = ["tvf_registry.h"],
    deps = [
        ":create_tvf_util",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "routine_persistence",
    srcs = ["routine_persistence.cc"],
    hdrs = ["routine_persistence.h"],
    deps = [
        "//backend/engine",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "js_udf_registry",
    srcs = ["js_udf_registry.cc"],
    hdrs = ["js_udf_registry.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "udf_registry",
    srcs = ["udf_registry.cc"],
    hdrs = ["udf_registry.h"],
    deps = [
        ":js_udf_registry",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
    ],
)

cc_test(
    name = "udf_registry_test",
    srcs = ["udf_registry_test.cc"],
    deps = [
        ":udf_registry",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
    ],
)

cc_library(
    name = "udf_registration_catalog",
    srcs = ["udf_registration_catalog.cc"],
    hdrs = ["udf_registration_catalog.h"],
    deps = [
        ":googlesql_catalog",
        ":udf_registry",
        "//backend/storage",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:type",
    ],
)

cc_library(
    name = "emulator_builtin_extensions",
    srcs = ["emulator_builtin_extensions.cc"],
    hdrs = ["emulator_builtin_extensions.h"],
    deps = [
        "@com_google_absl//absl/base",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
    ],
)

cc_library(
    name = "table_governance",
    srcs = ["table_governance.cc"],
    hdrs = ["table_governance.h"],
    deps = [
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
    linkopts = ["-lcrypto"],
)

cc_library(
    name = "googlesql_catalog",
    srcs = ["googlesql_catalog.cc"],
    hdrs = ["googlesql_catalog.h"],
    deps = [
        ":emulator_builtin_extensions",
        ":info_schema_table",
        ":storage_table",
        ":procedure_registry",
        ":tvf_registry",
        ":udf_registry",
        ":view_registry",
        ":wildcard_table",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
        # `simple_catalog` transitively re-exports `:type` and the
        # `googlesql/public/types/*` headers (`type_factory`,
        # `struct_type`, ...), which is what the adapter needs. We
        # don't depend on `googlesql/public/types:types` directly
        # because its package restricts visibility to
        # `//googlesql/base:googlesql_implementation`.
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
    ],
)
