# Bazel build for GoogleSQL-backed SQL tooling (format, parse, tokenize,
# catalog-aware completion). Intended as a standalone library for downstream
# UIs and linters as well as the engine SqlTools gRPC service.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "sql_tools",
    srcs = ["sql_tools.cc"],
    hdrs = ["sql_tools.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_split",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:error_helpers",
        "@googlesql//googlesql/public:error_location_cc_proto",
        "@googlesql//googlesql/public:formatter_options",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:lenient_formatter",
        "@googlesql//googlesql/public:parse_helpers",
        "@googlesql//googlesql/public:parse_resume_location",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:sql_formatter",
        "@googlesql//googlesql/public:function",
    ],
)

cc_library(
    name = "catalog_names",
    srcs = ["catalog_names.cc"],
    hdrs = ["catalog_names.h"],
    deps = [
        ":sql_tools",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "sql_tools_test",
    srcs = ["sql_tools_test.cc"],
    deps = [
        ":sql_tools",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:simple_catalog",
    ],
)
